--- a/centos-5.5-x86_64/vagrant/Vagrantfile
+++ b/centos-5.5-x86_64/vagrant/Vagrantfile
@@ -1,17 +1,29 @@
 Vagrant::Config.run do |config|
-  config.vm.box = 'Centos55-64'
-  config.vm.box_url = ''
+  config.vm.box = 'puppetmaster'
+  config.vm.box_url = '/Users/wagnerza/vagrant-centos55-64bits.box'
   config.vm.boot_mode = :gui
 
-  config.vm.define :be do |be|
-    be.vm.host_name = 'be.sandbox'
-    be.vm.network "33.33.33.33"
+  config.vm.define :sandbox do |puppetmaster|
+    puppetmaster.vm.host_name = 'puppetmaster'
+    puppetmaster.vm.network "33.33.33.33"
 
-    be.vm.provision :puppet do |puppet|
-      puppet.module_path = ['../puppet/modules','../puppet/modules']
+    puppetmaster.vm.provision :puppet do |puppet|
+      puppet.module_path = ['puppet/modules','puppet-master/modules']
       puppet.manifest_file = 'site.pp'
       puppet.options = %w[--templatedir templates]
     end
   end
+
+  # config.vm.define :db do |db_sandbox|
+  #   db_sandbox.vm.host_name = 'db_sandbox'
+  #   db_sandbox.vm.network "33.33.33.33"
+  # 
+  #   # db_sandbox.vm.provision :puppet do |puppet|
+  #   #       puppet.module_path = ['puppet/modules','puppet-master/modules']
+  #   #       puppet.manifest_file = 'site.pp'
+  #   #       puppet.options = %w[--templatedir templates]
+  #   #     end
+  # end
+
 
 end
