--- a/centos-5.6-x86_64/Vagrantfile
+++ b/centos-5.6-x86_64/Vagrantfile
@@ -1,12 +1,12 @@
 Vagrant::Config.run do |config|
   config.vm.box = 'puppetmaster'
-  config.vm.box_url = '/Users/wagnerza/Downloads/centos-56-x86_64.box'
+  config.vm.box_url = '/Users/wagnersza/Downloads/centos-56-x86_64.box'
   config.vm.boot_mode = :gui
 
-  config.vm.define :sandbox do |puppetmaster|
+  config.vm.define :puppetmaster do |puppetmaster|
     puppetmaster.vm.host_name = 'puppetmaster'
     puppetmaster.vm.network "33.33.33.33"
-
+  
     puppetmaster.vm.provision :puppet do |puppet|
       puppet.module_path = ['puppet/modules','puppet-master/modules']
       puppet.manifest_file = 'site.pp'
@@ -14,16 +14,15 @@ Vagrant::Config.run do |config|
     end
   end
 
-  # config.vm.define :db do |db_sandbox|
-  #   db_sandbox.vm.host_name = 'db_sandbox'
-  #   db_sandbox.vm.network "33.33.33.33"
-  # 
-  #   # db_sandbox.vm.provision :puppet do |puppet|
-  #   #       puppet.module_path = ['puppet/modules','puppet-master/modules']
-  #   #       puppet.manifest_file = 'site.pp'
-  #   #       puppet.options = %w[--templatedir templates]
-  #   #     end
-  # end
-
+  config.vm.define :puppetclient do |puppetclient|
+    puppetclient.vm.host_name = 'puppetclient'
+    puppetclient.vm.network "33.33.33.34"
+  
+    puppetclient.vm.provision :puppet do |puppet|
+      puppet.module_path = ['puppet/modules','puppet-master/modules']
+      puppet.manifest_file = 'site.pp'
+      puppet.options = %w[--templatedir templates]
+    end
+  end
 
 end
