--- a/centos-5.6-x86_64/Vagrantfile
+++ b/centos-5.6-x86_64/Vagrantfile
@@ -1,8 +1,9 @@
 Vagrant::Config.run do |config|
   config.vm.box = 'centos-64'
   config.vm.box_url = '/Users/wagnersza/Downloads/CentOS-5.6-x86_64.box'
-  config.vm.boot_mode = :gui
+  #config.vm.boot_mode = :gui
 
+  # Puppet Server
   config.vm.define :puppetmaster do |puppetmaster|
     puppetmaster.vm.host_name = 'puppetmaster'
     puppetmaster.vm.network "33.33.33.33"
@@ -14,6 +15,7 @@ Vagrant::Config.run do |config|
     end
   end
 
+  # Puppet Client
   config.vm.define :puppetclient do |puppetclient|
     puppetclient.vm.host_name = 'puppetclient'
     puppetclient.vm.network "33.33.33.34"
@@ -24,5 +26,30 @@ Vagrant::Config.run do |config|
       puppet.options = %w[--templatedir templates]
     end
   end
+
+  # Nginx
+  config.vm.define :nginx do |nginx|
+    nginx.vm.host_name = 'nginx'
+    nginx.vm.network "33.33.33.35"
+  
+    nginx.vm.provision :puppet do |puppet|
+      puppet.module_path = ['puppet/modules','puppet-master/modules']
+      puppet.manifest_file = 'site.pp'
+      puppet.options = %w[--templatedir templates]
+    end
+  end
+
+  # Rpmmaker
+  config.vm.define :rpmmaker do |rpmmaker|
+    rpmmaker.vm.host_name = 'rpmmaker'
+    rpmmaker.vm.network "33.33.33.36"
+  
+    rpmmaker.vm.provision :puppet do |puppet|
+      puppet.module_path = ['puppet/modules','puppet-master/modules']
+      puppet.manifest_file = 'site.pp'
+      puppet.options = %w[--templatedir templates]
+    end
+  end
+  
 
 end
