--- a/centos-5.6-x86_64/Vagrantfile
+++ b/centos-5.6-x86_64/Vagrantfile
@@ -1,6 +1,6 @@
 Vagrant::Config.run do |config|
   config.vm.box = 'centos-64'
-  config.vm.box_url = '/Users/wagnersza/Downloads/CentOS-5.6-x86_64.box'
+  config.vm.box_url = 'http://dl.dropbox.com/u/40185152/CentOS-5.6-x86_64.box'
   #config.vm.boot_mode = :gui
 
   # Puppet Server
@@ -51,5 +51,28 @@ Vagrant::Config.run do |config|
     end
   end
   
+  # ControlTier Server
+  config.vm.define :controltier_server do |controltier_server|
+    controltier_server.vm.host_name = 'controltier_server'
+    controltier_server.vm.network "33.33.33.37"
+  
+    controltier_server.vm.provision :puppet do |puppet|
+      puppet.module_path = ['puppet/modules','puppet-master/modules']
+      puppet.manifest_file = 'site.pp'
+      puppet.options = %w[--templatedir templates]
+    end
+  end
+  
+  # ControlTier Client
+  config.vm.define :controltier_client do |controltier_client|
+    controltier_client.vm.host_name = 'controltier_client'
+    controltier_client.vm.network "33.33.33.38"
+  
+    controltier_client.vm.provision :puppet do |puppet|
+      puppet.module_path = ['puppet/modules','puppet-master/modules']
+      puppet.manifest_file = 'site.pp'
+      puppet.options = %w[--templatedir templates]
+    end
+  end
 
 end
